--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta property="og:image" content="https://i.ibb.co/qMgPmw8/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Panties- 2ndTry</title>
+    <title>React Panties- 3rdTry</title>
   </head>
   <body>
     <div id="root"></div>
